# picoGPT-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch-gpt2.py  make-linux.sh  make-win.bat  setup-env.bat
src/: encoder.cpp  encoder.hpp  gpt2_pico.cpp
